# edsa-point-of-sale

./: .gitignore  Cargo.toml  todo.md
records/: Flourdyield  Kuku Feedsdyield  dailyyield  employees  ext_deni  finishedproduct  finprod  in_acc  int_deni  out_acc  people  pkgprod  products  rawmat
src/: lib.rs  main.rs
src/pipeline/: accounts.rs  errors.rs  inventory.rs  people.rs
src/sale/: accounts.rs  custom_date.rs  errors.rs  inventory.rs  mod.rs  people.rs
