[package]
name = "edsa_pos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["rlib"]


[dependencies]
serde={version="1", features=["derive"]}
serde_json="1"
serde_yaml="0.8.23"
chrono ={version="0.4", features=["serde"]}
date = "0.1.3"
time = "0.1.0"
